cpp/bob/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.009s
user	0m0.004s
sys	0m0.006s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
[ 25%] Building CXX object CMakeFiles/bob.dir/bob_test.cpp.o
[ 50%] Building CXX object CMakeFiles/bob.dir/bob.cpp.o
[ 75%] Building CXX object CMakeFiles/bob.dir/test/tests-main.cpp.o
[100%] Linking CXX executable bob
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
[100%] Built target bob
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
===============================================================================
All tests passed (25 assertions in 25 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
[100%] Built target test_bob
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/bob.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/bob.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)31562"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
bob.cpp                                       20      20   100%   
bob_test.cpp                                  75      75   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        129     122    94%
------------------------------------------------------------------------------
lines: 94.6% (122 out of 129)
branches: 40.6% (207 out of 510)

real	0m12.991s
user	0m11.780s
sys	0m1.162s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.142s
user	0m0.105s
sys	0m0.038s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.167s
user	0m0.111s
sys	0m0.057s

===============================================================================

Running: clang-format-16 -style=file -i ./bob.cpp ./bob_test.cpp ./bob.h

real	0m0.020s
user	0m0.011s
sys	0m0.009s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./bob.cpp ./bob_test.cpp ./bob.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/bob.h:7:10: fatal error: 'regex' file not found
#include <regex>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/bob/bob.h.

real	0m3.266s
user	0m3.125s
sys	0m0.141s


real	0m3.268s
user	0m3.125s
sys	0m0.143s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
36224 warnings generated.
80430 warnings generated.
80430 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/bob/bob.h.
Suppressed 80435 warnings (80430 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m16.950s
user	0m16.768s
sys	0m0.181s
Running: clang-tidy-16 ./bob.cpp ./bob_test.cpp ./bob.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/bob/bob.h:7:10: error: 'regex' file not found [clang-diagnostic-error]
#include <regex>
         ^~~~~~~


real	0m16.952s
user	0m16.770s
sys	0m0.182s

===============================================================================

